# local_worker

./: .gitignore  AGENTS.md  ARCHITECTURE.md  OPERATIONS.md  README.md  pyproject.toml
src/ai_issue_worker/: __init__.py  agent.py  cli.py  codex_backend.py  config.py  daemon.py  diff_policy.py  github_gh.py  issue_selection.py  jobs.py  locking.py  models.py  pr.py  privacy.py  prompt.py  runner.py  shell.py  token_usage.py  verifier.py  worktree.py
tests/: test_cli.py  test_codex_backend.py  test_config.py  test_diff_policy.py  test_github_gh.py  test_issue_selection.py  test_jobs.py  test_pr.py  test_prompt.py  test_runner_review.py  test_slugify.py  test_verifier.py  test_worktree.py
